--- a/client/src/document/index.scss
+++ b/client/src/document/index.scss
@@ -1,5 +1,6 @@
 @import "~@mdn/minimalist/sass/vars/layout";
 @import "~@mdn/minimalist/sass/vars/color-palette";
+@import "~@mdn/minimalist/sass/vars/borders";
 @import "~@mdn/minimalist/sass/vars/typography";
 
 @import "~@mdn/minimalist/sass/mixins/utils";
@@ -7,13 +8,30 @@
 @import "./prism-overrides";
 
 .article {
-  margin-bottom: $large-spacing;
+  margin-bottom: $base-spacing;
+  padding: $base-spacing;
+
+  @media #{$mq-small-desktop-and-up} {
+    margin-bottom: $large-spacing;
+  }
 
   p,
   ul,
   ol,
   dl {
     @include readable-line-length();
+  }
+
+  a {
+    code {
+      color: $neutral-100;
+      text-decoration: underline;
+    }
+
+    &:active {
+      background-color: $primary-200;
+      color: $text-color-inverted;
+    }
   }
 
   h2,
@@ -27,8 +45,12 @@
     margin-bottom: ($base-unit * 6);
   }
 
-  a:active {
-    background-color: $primary-200;
-    color: $text-color-inverted;
+  pre {
+    background-color: $neutral-550;
+    border-left: $code-example-border;
+    max-width: 100%;
+    overflow: auto;
+    padding: $base-spacing;
+    width: 100%;
   }
 }
