--- a/client/src/ui/molecules/toc/index.scss
+++ b/client/src/ui/molecules/toc/index.scss
@@ -3,12 +3,13 @@
 @import "~@mdn/minimalist/sass/vars/typography";
 
 .document-toc {
+  padding: ($base-spacing / 2) $base-spacing;
   position: relative;
 
   h2 {
     display: none;
 
-    @media #{$mq-small-desktop-and-up} {
+    @media #{$mq-large-desktop-and-up} {
       display: block;
       font-size: $medium-font-size;
     }
@@ -19,17 +20,16 @@
     border-bottom: 2px solid $primary-100;
     color: $link-color;
     font-weight: normal;
-    margin-top: $base-spacing / 2;
-    padding: 10px 0;
+    padding: ($base-spacing / 2);
     text-align: left;
     width: 100%;
 
-    @media #{$mq-small-desktop-and-up} {
+    @media #{$mq-large-desktop-and-up} {
       display: none;
     }
 
     /* we already disable all animation and transitions globally via a reset so */
-    &::after {
+    &::before {
       /* stylelint-disable-line a11y/media-prefers-reduced-motion */
       background: transparent url("~@mdn/dinocons/arrows/triangle.svg") 0 0
         no-repeat;
@@ -37,21 +37,21 @@
       content: "";
       display: inline-block;
       height: 16px;
-      margin-left: 5px;
-      transform: rotate(180deg);
+      margin-right: $base-unit;
+      transform: rotate(90deg);
       transform-origin: 50%;
-      transition: transform 0.3s ease-in;
+      transition: transform 0.2s ease-in;
       vertical-align: sub;
       width: 16px;
 
-      @media #{$mq-small-desktop-and-up} {
+      @media #{$mq-large-desktop-and-up} {
         display: none;
       }
     }
 
     &[aria-expanded="true"] {
-      &::after {
-        transform: rotate(0deg);
+      &::before {
+        transform: rotate(180deg);
       }
     }
   }
@@ -61,13 +61,12 @@
     border: 2px solid $primary-100;
     display: none;
     list-style: none;
-    padding: 0 20px;
+    padding: 0 $base-spacing;
     position: absolute;
-    top: 60px;
-    width: 100%;
-    z-index: 99;
+    top: 65px;
+    z-index: $top-layer;
 
-    @media #{$mq-small-desktop-and-up} {
+    @media #{$mq-large-desktop-and-up} {
       background-color: inherit;
       border: 0;
       display: block;
@@ -82,7 +81,7 @@
       line-height: 1.2;
       margin: 20px 0;
 
-      @media #{$mq-small-desktop-and-up} {
+      @media #{$mq-large-desktop-and-up} {
         margin: 10px 0;
       }
     }
